# pman19rs

./: .gitignore  Cargo.toml  LICENSE  README.rst
cmake_samples/: README.rst
cmake_samples/cmake/: my_utils.cmake
cmake_samples/lib_usage1/: CMakeLists.txt
cmake_samples/lib_usage1/src/: main.c
cmake_samples/single_app/: CMakeLists.txt
cmake_samples/single_app/src/: main.c
cmake_samples/single_lib/: CMakeLists.txt
cmake_samples/single_lib/src/: CMakeLists.txt  single_lib.c
cmake_samples/single_lib/tests/: CMakeLists.txt  run_test.c  run_test_t1.c  test1.c  test2.c  test_list.h.in  test_types.h
rust_src/src/: k.rs  lib.rs  main.rs
samples/: all.toml  config.toml  v2_binary-only.toml  v2_config-only.toml  v2_src-alien.toml  v2_src.toml
src/: lib.rs
